# QQMusicApi

./: .gitignore  .pdm-python  LICENSE  README.md  index.py  pyproject.toml  requirements.txt  run.py
api/: credential.json  index.py
bubuapi/: __init__.py
bubuapi/qqmusic/: login.py  song.py
bubuapi/utils/: __init__.py  data_utilities.py
bubuapi/weather/: __init__.py
bubuapi/weather/base/: main.py  qweather.py  weather_img_data.py  xj_requests.py
bubuapi/weather/base/src/: index.html  output.html  output64.html
src/routes/: __init__.py  credential.py  login.py  song.py
src/utils/: sync.py
tests/: test1.py
